# patch_localization

./: .gitignore  CMakeLists.txt  README.md
include/: autoencoder.h  image_processor.h  index_io.h  localization.h  patch_localization.h
scripts/: build.ps1
src/: autoencoder.cpp  image_processor.cpp  index_io.cpp  localization.cpp  main.cpp
